--- a/frontend/src/pages/Register.css
+++ b/frontend/src/pages/Register.css
@@ -1,4 +1,80 @@
 body{
-    background-color: rgb(212, 212, 250);
+    background-color: #FFFFFF;
     font-family:Arial, Helvetica, sans-serif;
+    
+}
+.container{
+    display: flex ;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    padding: 1rem;
+}
+.register_div{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 90%;
+    max-width: 600px;
+    text-align: center;
+    background-color: #eecc5dff;
+    margin: 1rem auto;
+    border-radius: 10px;
+    padding: 2rem;    
+
+} 
+.form_submit{
+    width: 60%;
+    max-width: 200px;
+    align-self: center;
+    background-color: #000000;
+    color: #FFFFFF;
+    border-radius: 5px;
+    padding: .5rem 1rem;
+    margin: 1rem auto;
+    font-size: 1rem;
+}
+
+input{
+    padding: 0.5rem 1rem;
+    margin: .5rem;
+    font-size: 1rem;
+    border-radius: 5px;
+}
+
+.row{
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+}
+
+.dob-selector select {
+    padding: 0.5rem 1rem;
+    margin: .5rem;
+    font-size: 1rem;
+    border-radius: 5px;
+}
+.dob-selector {
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+}
+
+.radio-button {
+  display: inline-block;
+  padding: 8px 16px;
+  border-radius: 8px;
+  background-color: #1A1A1A;
+  color: #ffffff;
+  cursor: pointer;
+  transition: all 0.2s ease;
+  user-select: none;
+  margin-right: 8px;
+}
+
+
+span{
+    margin: .5rem;
 }
