--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -3,22 +3,30 @@ html, body {
     padding: 0;
     height: 100%;
     background-color: #FFF9DE;
-    overflow-x: hidden; 
+    overflow-x: hidden;
     box-sizing: border-box;
 }
+
 .container {
     display: flex;
-    flex-direction: row;
     width: 100vw;
     height: 100vh;
 }
+
+/* Main content takes remaining space */
+.main_content {
+    flex: 1;
+    background-color: #FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Sidebar stays on the right */
 .side_container {
-    position: fixed;
-    top: 0;
-    right: 0; 
     width: 30vw;
     min-width: 150px;
-    height: 100%;     
+    height: 100%;
     background-color: #EECC5D;
     display: flex;
     flex-direction: column;
@@ -26,25 +34,24 @@ html, body {
     align-items: center;
 }
 
-.main_content {
-    margin-right: 20vw;  
-    min-width: calc(100% - 20vw);
-    background-color: #FFF;
+.login_form {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
-.input_login{
+.input_login {
     width: 100%;
     max-width: 400px;
-    padding: 1em 1em;
+    padding: 1em;
     margin: .5em;
 }
-.button_login{
+
+.button_login,
+.button_create_account {
     width: 75%;
     max-width: 400px;
-    padding: 1em 1em;
     color: white;
     background-color: black;
     border-radius: 10px;
@@ -52,27 +59,14 @@ html, body {
     font-size: 1rem;
     padding: 0.75em 1em;
     margin: .5em;
+    cursor: pointer;
 }
 
-.login_form{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-.button_create_account{
-        width: 75%;
-    max-width: 400px;
-    padding: 1em 1em;
-    color: white;
-    background-color: black;
+.button_create_account {
     border-radius: 15px;
-    border: none;
-    font-size: 1rem;
-    padding: 0.75em 1em;
     margin-top: 1rem;
 }
 
-a{
+a {
     margin: .5rem;
 }
