--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -13,7 +13,6 @@ html, body {
     height: 100vh;
 }
 
-/* Main content takes remaining space */
 .main_content {
     flex: 1;
     background-color: #FFF;
@@ -22,11 +21,10 @@ html, body {
     align-items: center;
 }
 
-/* Sidebar stays on the right */
 .side_container {
     width: 30vw;
     min-width: 150px;
-    height: 100%;
+    height: 104%;
     background-color: #EECC5D;
     display: flex;
     flex-direction: column;
@@ -60,6 +58,9 @@ html, body {
     padding: 0.75em 1em;
     margin: .5em;
     cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .button_create_account {
