--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -1,10 +1,12 @@
 html, body {
-    margin: 0;
-    padding: 0;
     height: 100%;
     background-color: #FFF9DE;
     overflow-x: hidden;
     box-sizing: border-box;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    gap: 0;
 }
 
 .container {
@@ -24,7 +26,7 @@ html, body {
 .side_container {
     width: 30vw;
     min-width: 150px;
-    height: 104%;
+    height: 100%;
     background-color: #EECC5D;
     display: flex;
     flex-direction: column;
